--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ MONGODB_URI = 'mongodb+srv://rudraxsharad:Happy1963g@cluster0.rud9t77.mongodb.ne
 CLOUDINARY_NAME = 'dewjsb1ew'
 CLOUDINARY_API_KEY = '437534743849154'
 CLOUDINARY_SECRET_KEY = '0_WUB3kmo58BLcrNTsOcOBmGWdw'
+ADMIN_EMAIL = 'rudraxrishu@gmail.com'
+ADMIN_PASSWORD = '1234@Abc'
+JWT_SECRET = 'myproject'
