Fixing some backend errors

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI = 'mongodb+srv://rudraxsharad:Happy1963g@cluster0.rud9t77.mongodb.net/'
+MONGODB_URI='mongodb+srv://rudraxsharad:Happy1963g@cluster0.rud9t77.mongodb.net/Docuslot?retryWrites=true&w=majority'
 CLOUDINARY_NAME = 'dewjsb1ew'
 CLOUDINARY_API_KEY = '437534743849154'
 CLOUDINARY_SECRET_KEY = '0_WUB3kmo58BLcrNTsOcOBmGWdw'
